--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 **/node_modules
 **/.env
+
+# Logs
+client/logs
+*.log
+client/npm-debug.log*
+client/arn-debug.log*
+client/yarn-error.log*
+client/pnpm-debug.log*
+client/lerna-debug.log*
+
+client/dist
+client/dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
