--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
